--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,8 @@
     },
     "permissions" : [
         "tabs",
-        "cookies"],
+        "cookies",
+        "https://medium.com/*"],
     "browser_action": { "default_icon": "cookie.png"},
     "content_scripts" : [{
         "matches": ["https://*/*"],
